syntax = "proto3";

package aliothcontroller;

option java_package = "com.futurewei.alioth.controller.schema";
option java_outer_classname = "Port";

import "common.proto";

message PortConfiguration {
  int32 version = 1;

  string project_id = 2;
  string network_id = 3;
  string id = 4;
  string name = 5;
  bool admin_state_up = 6;
  string mac_address = 7;
  string veth_name = 8;

  message HostInfo {
     string ip_address = 1;
     string mac_address = 2;
  }

  message FixedIp {
    string subnet_id = 1;
    string ip_address = 2;
  }

  message SecurityGroupId {
    string id = 1;
  }

  message AllowAddressPair {
    string ip_address = 1;
    string mac_address = 2;
  }

  message ExtraDhcpOption {
    string name = 1;
    string value = 2;
  }

  HostInfo host_info = 9;
  repeated FixedIp fixed_ips = 10;
  repeated SecurityGroupId security_group_ids = 11;
  repeated AllowAddressPair allow_address_pairs = 12;
  repeated ExtraDhcpOption extra_dhcp_options = 13;
}

message PortState {
  OperationType operation_type = 1;
  PortConfiguration configuration = 2;
}
